@@ -1,9 +1,11 @@
 Package: argosTrack
 Type: Package
 Title: Fit Movement Models to Argos Data for Marine Animals
-Version: 1.2.0-0005
-Date: 2018-07-26
-Author: Christoffer Moesgaard Albertsen
+Version: 1.2.0-0006
+Date: 2018-08-08
+Authors@R: person(c("Christoffer","Moesgaard"), "Albertsen",
+	   email = "cmoe@aqua.dtu.dk", role = c("aut", "cre"),
+	   comment = c(ORCID = "0000-0003-0088-4363"))
 Maintainer: Christoffer Moesgaard Albertsen <cmoe@aqua.dtu.dk>
 Description: Fits various state-space animal movement models to Argos data. Models are fitted by maximum likelihood with the Laplace approximation via 'TMB' and 'nlminb'. Functionality to visualize and simulate the models is available.
 Depends: R (>= 3.0.2)
