@@ -40,7 +40,7 @@ mov <- DSBHN(dseq)
 Other "Movement models": \code{\link{CSB-class}},
   \code{\link{CTCRW-class}}, \code{\link{DCRW-class}},
   \code{\link{DIRAC-class}}, \code{\link{DSBW-class}},
-  \code{\link{IDCRW-class}}, \code{\link{MPCTCRW-class}},
+  \code{\link{GDCRW-class}}, \code{\link{MPCTCRW-class}},
   \code{\link{Movement-class}}, \code{\link{OUL-class}},
   \code{\link{OUV-class}}, \code{\link{RW-class}}
 }
