@@ -35,7 +35,7 @@ Albertsen, C.M. (2016) Personal communication.
 Other "Movement models": \code{\link{CSB-class}},
   \code{\link{CTCRW-class}}, \code{\link{DCRW-class}},
   \code{\link{DIRAC-class}}, \code{\link{DSBHN-class}},
-  \code{\link{DSBW-class}}, \code{\link{IDCRW-class}},
+  \code{\link{DSBW-class}}, \code{\link{GDCRW-class}},
   \code{\link{MPCTCRW-class}},
   \code{\link{Movement-class}}, \code{\link{OUL-class}},
   \code{\link{RW-class}}
