@@ -46,42 +46,42 @@ mod <- CTCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_true(is.null(mod$getTMBmap(hello=FALSE)$movePars))
 
 ###########
-## IDCRW ##
+## GDCRW ##
 ###########
 
-## IDCRW equaldecay works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW equaldecay works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(equaldecay=TRUE)$movePars,factor(c(1,1,3,4,5,6)))
 is_true(is.null(mod$getTMBmap(equaldecay=FALSE)$movePars))
 
-## IDCRW equaldrift works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW equaldrift works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(equaldrift=TRUE)$movePars,factor(c(1,2,3,4,5,5)))
 is_true(is.null(mod$getTMBmap(equaldrift=FALSE)$movePars))
 
-## IDCRW fixdrift works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW fixdrift works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(fixdrift=TRUE)$movePars,factor(c(1,2,3,4,NA,NA)))
 is_true(is.null(mod$getTMBmap(fixdrift=FALSE)$movePars))
 
 
-## IDCRW fixrotation works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW fixrotation works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(fixrotation=TRUE)$movePars,factor(c(1,2,NA,4,5,6)))
 is_true(is.null(mod$getTMBmap(fixrotation=FALSE)$movePars))
 
-## IDCRW fixmovecor works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW fixmovecor works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(fixmovecor=TRUE)$movePars,factor(c(1,2,3,NA,5,6)))
 is_true(is.null(mod$getTMBmap(fixmovecor=FALSE)$movePars))
 
-## IDCRW equalvar works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW equalvar works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(equalvar=TRUE)$logSdState,factor(c(1,1)))
 is_true(is.null(mod$getTMBmap(fixmovecor=FALSE)$movePars))
 
-## IDCRW several works
-mod <- IDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
+## GDCRW several works
+mod <- GDCRW(as.POSIXct("2017-01-01 00:00:00") + (1:100) * 60 * 60)
 is_equal(mod$getTMBmap(equaldecay=TRUE,fixdrift=TRUE)$movePars,
          factor(c(1,1,3,4,NA,NA)))
 
