@@ -1,3 +1,10 @@
+# Version x.y.z
+- Added movement model: Generalized first Difference Correlated Random Walk (GDCRW)
+- Removed dependency on testthat; added dependency on utils
+- Extra input checks for rmvsh, Measurement and Observation
+- Removed unused code in Movement$copy
+- Plot functions now return the object being plotted invisibly
+- Bug fixes:
 
 # Version 1.2.0
 - Added unit tests
